--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김선아 웹 포트폴리오</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
         <header>
             <nav class="gnb">
                 <ul class="menu-list">
-                    <li class="menu-item">home</li>
+                    <li class="menu-item active">home</li>
                     <li class="menu-item">about</li>
                     <li class="menu-item">portfolio</li>
                     <li class="menu-item">contact</li>
@@ -22,34 +22,94 @@
         <main>
             <section class="home">
                 <span class="title-circle"></span>
+                <span class="title-circle2"></span>
+                <span class="title-circle3"></span>
+                <span class="gnb-circle2"></span>
                 <span class="gnb-circle"></span>
                 <div class="title">
-                    <h4>Kim sun a</h4>
+                    <h4>web publisher</h4>
                     <h1>portfolio</h1>
                 </div>
                 <div class="key">
-                    간단한 소개글
+                   <p> 간단한 소개글</p>
                 </div>
-                <h3 class="name">kim sun a</h3>
+                <div lang="scroll">
+                    <div class="icon-scroll"></div>
+                </div>               
             </section>
             <section class="about">
-                <div class="profile">
-                    <h3>profile</h3>
+                <div class="about-wrap">
+                    <div class="profile">
+                        <img src="./image/미모티콘.png" alt="프로필 미모티콘">
+                        <div>
+                            <h3>kim sun a</h3>
+                            <p>
+                               <div>1999.01.04</div>
+                               <div> 010 2652 3106</div>
+                               <div>tjsdk1260@gmail.com</div>
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <ul class="about-list">
+                            <li class="education">
+                                <h3>education</h3>
+                                <hr>
+                                <div class="date">
+                                    <div>2017.3 - 2021.2</div>
+                                    <div>2022.3</div>
+                                </div>
+                                <div class="contents">
+                                    <p>영남대학교 생활제품디자인학과 전공</p>
+                                    <p>sbs아카데미컴퓨터아트학원</p>
+                                </div>
+                            </li>
+                            <li class="experience">
+                                <h3>experience</h3>
+                                <hr>
+                                <div class="date">
+                                    <div>2021.03 - 2021.07</div>
+                                    <div>2021.08 - 2022.05</div>
+                                </div>
+                                <div class="contents">
+                                    <p>SK스페셜티 사무보조</p>
+                                    <p>삭스어필(주) 디자이너</p>
+                                </div>
+                            </li>
+                            <li class="Certificate">
+                                <h3>Certificate</h3>
+                                <hr>
+                                <div class="date">
+                                    <div>2020.11.30</div>
+                                    <div>2022.</div>
+                                </div>
+                                <div class="contents">
+                                    <p>자동자운전면허증 2종보통</p>
+                                    <p>웹디자인기능사 필기</p>
+                                </div>
+                            </li>
+                            <li class="skills">
+                                <h3>skills</h3>
+                                <hr>
+                                <div>
+                                    <img src="./image/logo/photoshop-mobile.svg" alt="photoshop logo image">
+                                    <img src="./image/logo/illustrator.svg" alt="logo image">
+                                    <img src="./image/logo/html.svg" alt="html logo image">
+                                    <img src="./image/logo/css.svg" alt=" csslogo image">
+                                    <img src="./image/logo/jquery.svg" alt="jquery logo image">
+                                    <img src="./image/logo/javascript.svg" alt="javascript logo image">
+                                </div>
+                            </li>
+                         </ul>
+                    </div>
                 </div>
-                <div class="education">
-                    <h3>education</h3>
-                </div>
-                <div class="experience">
-                    <h3>experience</h3>
-                </div>
-                <div class="skills">
-                    <h3>skills</h3>
-                </div>
-                <div class="photo">
-                    <img src="./image/미모티콘.png" alt="프로필 미모티콘">
-                </div>
+                <div class="profile-circle"></div>
+                <div class="list-circle"></div>
             </section>
             <section class="portfolio">
+                <article></article>
+                <article></article>
+                <article></article>
                 리디자인 사이트 
                 스토리보드 
                 사이트 연결 버튼
@@ -57,7 +117,8 @@
                 피씨 모바일 적응형,반응형 작성
             </section>
             <section class="contact">
-                sns 전화번호 
+                sns 전화번호
+                <div class="contact-circle"></div>
             </section>
         </main>
         <footer></footer>
