--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김선아 웹 포트폴리오</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -40,7 +43,7 @@
             <section class="about">
                 <div class="about-wrap">
                     <div class="profile">
-                        <img src="./image/미모티콘.png" alt="프로필 미모티콘">
+                        <img src="./image/s_image/미모티콘.png" alt="프로필 미모티콘">
                         <div>
                             <h3>kim sun a</h3>
                             <p>
@@ -81,7 +84,7 @@
                                 <hr>
                                 <div class="date">
                                     <div>2020.11.30</div>
-                                    <div>2022.</div>
+                                    <div>2022.09</div>
                                 </div>
                                 <div class="contents">
                                     <p>자동자운전면허증 2종보통</p>
@@ -107,14 +110,63 @@
                 <div class="list-circle"></div>
             </section>
             <section class="portfolio">
-                <article></article>
-                <article></article>
-                <article></article>
-                리디자인 사이트 
-                스토리보드 
-                사이트 연결 버튼
-                기획의도 간단 소개 
-                피씨 모바일 적응형,반응형 작성
+                <article>
+                    <div class="pc">
+                        <div class="site-pc-page">
+                            이미지
+                        </div>
+                        <div>
+                            <h2>Nonfiction</h2>
+                            <iframe src="https://tjsdk1260.github.io/Nonfiction/" frameborder="0" style="width:600px; -webkit-transform:scale(0.5);-webkit-transform-origin:0 0"></iframe>
+                            <div class="pc-image">
+                                <img src="./image/s_image/논픽션 아이맥.png" alt="nonfiction_pc">
+                            </div>
+                            <div>리디자인 소개 반응형</div>
+                            <div>사용 프로그램</div>
+                            <div>기획 디자인 참여도 100%</div>
+                            <button>스토리보드</button>
+                            <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank">사이트 바로가기</a>
+                        </div>
+                    </div>
+                    <div class="mobile">
+                        <div class="site-mb-page"></div>
+                    </div>
+                </article>
+                <article>
+                    <div class="pc">
+                        <div class="site-pc-page">
+                          이미지
+                        </div>
+                        <div>
+                            <h2>국립재난안전연구원</h2>
+                            <div class="pc-image">
+                                <img src="./image/s_image/국립재난안전연구원 아이맥.png" alt="국립재난안전연구원_pc">
+                            </div>
+                            <div>리디자인 소개 반응형</div>
+                            <div>사용 프로그램</div>
+                            <div>기획 디자인 참여도 100%</div>
+                            <button>스토리보드</button>
+                            <a href=" https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank">사이트 바로가기</a>
+                        </div>
+                    </div>
+                    <div class="mobile">
+                        <div class="site-mb-page"></div>
+                    </div>
+                </article>
+                <article>
+                    <div class="mobile">
+                        <div class="site-mb-page"></div>
+                        <div>
+                            <h2>arc'teryx</h2>
+                            <div class="mobile-image">
+                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
+                            <div>리디자인 적응형</div>
+                            <div>사용 프로그램</div>
+                            <div>기획 디자인 참여도</div>
+                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank">사이트 바로가기</a>
+                        </div>
+                    </div>
+                </article>
             </section>
             <section class="contact">
                 sns 전화번호
