--- a/index.html
+++ b/index.html
@@ -110,60 +110,60 @@
                 <div class="list-circle"></div>
             </section>
             <section class="portfolio">
-                <article>
+                <article class="arc'teryx">
+                    <div class="mobile">
+                        <div>
+                            <h2>arc'teryx</h2>
+                            <h4>리디자인</h4>
+                            <div class="mobile-image">
+                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
+                            <div>적응형</div>
+                            <div>사용 프로그램</div>
+                            <div>기획 디자인 참여도</div>
+                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank">사이트 바로가기</a>
+                        </div>
+                        <div class="site-mb-page">
+                            메뉴 연 화면 이미지 캡처
+                        </div>
+                    </div>
+                </article>
+                <article class="nonfiction">
                     <div class="pc">
                         <div class="site-pc-page">
-                            이미지
+                            <img src="./image/s_image/논픽션 전체화면 캡쳐.png" alt="nonfiction_site_img">
                         </div>
                         <div>
+                            <div class="site-circle"></div>
                             <h2>Nonfiction</h2>
-                            <iframe src="https://tjsdk1260.github.io/Nonfiction/" frameborder="0" style="width:600px; -webkit-transform:scale(0.5);-webkit-transform-origin:0 0"></iframe>
+                            <h4>리디자인</h4>
                             <div class="pc-image">
-                                <img src="./image/s_image/논픽션 아이맥.png" alt="nonfiction_pc">
+                                <img src="./image/s_image/논픽션 아이맥&아이폰.png" alt="nonfiction_pc&mobile">
                             </div>
-                            <div>리디자인 소개 반응형</div>
+                            <div>소개 반응형</div>
                             <div>사용 프로그램</div>
                             <div>기획 디자인 참여도 100%</div>
                             <button>스토리보드</button>
                             <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank">사이트 바로가기</a>
                         </div>
                     </div>
-                    <div class="mobile">
-                        <div class="site-mb-page"></div>
-                    </div>
                 </article>
-                <article>
+                <article class="national">
                     <div class="pc">
                         <div class="site-pc-page">
-                          이미지
+                          <img src="./image/s_image/국립재난안전연구원 전체화면 캡쳐.png" alt="국립재난안전연구원_사이트_이미지">
                         </div>
                         <div>
+                            <div class="nat-circle"></div>
                             <h2>국립재난안전연구원</h2>
+                            <h4>리디자인</h4>
                             <div class="pc-image">
-                                <img src="./image/s_image/국립재난안전연구원 아이맥.png" alt="국립재난안전연구원_pc">
+                                <img src="./image/s_image/국립재난안전연구원 아이맥&아이폰.png" alt="국립재난안전연구원_pc&mobile">
                             </div>
-                            <div>리디자인 소개 반응형</div>
+                            <div>소개 반응형</div>
                             <div>사용 프로그램</div>
                             <div>기획 디자인 참여도 100%</div>
                             <button>스토리보드</button>
                             <a href=" https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank">사이트 바로가기</a>
-                        </div>
-                    </div>
-                    <div class="mobile">
-                        <div class="site-mb-page"></div>
-                    </div>
-                </article>
-                <article>
-                    <div class="mobile">
-                        <div class="site-mb-page"></div>
-                        <div>
-                            <h2>arc'teryx</h2>
-                            <div class="mobile-image">
-                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
-                            <div>리디자인 적응형</div>
-                            <div>사용 프로그램</div>
-                            <div>기획 디자인 참여도</div>
-                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank">사이트 바로가기</a>
                         </div>
                     </div>
                 </article>
