--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김선아 웹 포트폴리오</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/66c9b6e88e.js"crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -34,7 +32,8 @@
                     <h1>portfolio</h1>
                 </div>
                 <div class="key">
-                   <p> 간단한 소개글</p>
+                    <h3>sminun;</h3>
+                    <p>어느 곳이나 잘 스며들어 어울리는 김선아입니다</p>
                 </div>
                 <div lang="scroll">
                     <div class="icon-scroll"></div>
@@ -45,10 +44,10 @@
                     <div class="profile">
                         <img src="./image/s_image/미모티콘.png" alt="프로필 미모티콘">
                         <div>
-                            <h3>kim sun a</h3>
+                            <h3>Kim Sun A</h3>
                             <p>
                                <div>1999.01.04</div>
-                               <div> 010 2652 3106</div>
+                               <div>010 2652 3106</div>
                                <div>tjsdk1260@gmail.com</div>
                             </p>
                         </div>
@@ -56,25 +55,29 @@
                     <div>
                         <ul class="about-list">
                             <li class="education">
-                                <h3>education</h3>
-                                <hr>
+                                <h3>Education</h3>
                                 <div class="date">
-                                    <div>2017.3 - 2021.2</div>
-                                    <div>2022.3</div>
+                                    <div>2014.03 - 2017.02</div>
+                                    <div>2017.03 - 2021.02</div>
+                                    <div>2022.03 - 2023.</div>
                                 </div>
                                 <div class="contents">
+                                    <p>영주여자고등학교 졸업</p>
                                     <p>영남대학교 생활제품디자인학과 전공</p>
                                     <p>sbs아카데미컴퓨터아트학원</p>
                                 </div>
                             </li>
                             <li class="experience">
-                                <h3>experience</h3>
-                                <hr>
+                                <h3>Experience</h3>
                                 <div class="date">
+                                    <div>2019.10</div>
+                                    <div>2020.11</div>
                                     <div>2021.03 - 2021.07</div>
                                     <div>2021.08 - 2022.05</div>
                                 </div>
                                 <div class="contents">
+                                    <p>청년 아이디어 챌린지 프로그램 예선 장려상</p>
+                                    <p>영남대학교 생활제품디자인학과 졸업전시회</p>
                                     <p>SK스페셜티 사무보조</p>
                                     <p>삭스어필(주) 디자이너</p>
                                 </div>
@@ -83,10 +86,14 @@
                                 <h3>Certificate</h3>
                                 <hr>
                                 <div class="date">
-                                    <div>2020.11.30</div>
+                                    <div>2010.08</div>
+                                    <div>2010.12</div>
+                                    <div>2020.11</div>
                                     <div>2022.09</div>
                                 </div>
                                 <div class="contents">
+                                    <p>ITQ 아래한글 A등급</p>
+                                    <p>ITQ 한글파워포인트 A등급</p>
                                     <p>자동자운전면허증 2종보통</p>
                                     <p>웹디자인기능사 필기</p>
                                 </div>
@@ -110,27 +117,141 @@
                 <div class="list-circle"></div>
             </section>
             <section class="portfolio">
-                <article class="arc'teryx">
-                    <div class="mobile">
-                        <div>
-                            <h2>arc'teryx</h2>
-                            <h4>리디자인</h4>
-                            <div class="mobile-image">
-                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
-                            <div>적응형</div>
-                            <div>사용 프로그램</div>
-                            <div>기획 디자인 참여도</div>
-                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank">사이트 바로가기</a>
+                <div class="sign">
+                    <div class="sign-circle1"></div>
+                    <div class="portfolio-title">
+                        <h1>Arc'teryx</h1>
+                    </div>
+                    <div class="introduce">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>01</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
+                <article class="arcteryx">
+                   <div class="wrap">
+                    <div class="site-content">
+                        <h2>Arc'teryx</h2>
+                        <h4>리디자인</h4>
+                        <div class="mobile-image">
+                           <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile">
                         </div>
-                        <div class="site-mb-page">
-                            메뉴 연 화면 이미지 캡처
+                        <div>사용프로그램</div>
+                        <div>참여도 100%</div>
+                        <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank" id="clickBtn">사이트 바로가기</a>
+                    </div>
+                    <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_site_image">
+                    <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_site_image">
+                   </div>
+                </article>
+                <div class="sign">
+                    <div class="sign-circle2"></div>
+                    <div class="portfolio-title">
+                        <h1>Nonfiction</h1>
+                    </div>
+                    <div class="introduce">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>02</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
+                <article class="nonfiction">
+                    <div class="wrap">
+                       <img src="./image/s_image/논픽션 전체화면 캡쳐.png" alt="nonfiction-site-image" class="site-image1">
+                       <img src="./image/s_image/논픽션 모바일 전체화면 캡쳐.png" alt="nonfiction-mobile-site-image" class="site-image2">
+                        <div class="site-content">
+                            <h2>Nonfiction</h2>
+                            <h4>리디자인</h4>
+                            <div class="site-circle2"></div>
+                            <div class="pcMobile-image">
+                                <img src="./image/s_image/논픽션 아이맥&아이폰.png">
+                            </div>    
+                            <div>사용프로그램</div>
+                            <div>참여도 100%</div>
+                            <div class="storyboard-wrap">
+                                <label for="modal" class="button">스토리보드</label>
+                            </div>
+                            <input type="checkbox" id="modal" class="hidden">
+                            <div class="box-modal">
+                                <label for="modal" class="closer">X</label>
+                                <div class="storyboard">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                            <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">사이트 바로가기</a> 
                         </div>
                     </div>
                 </article>
+                <div class="sign">
+                    <div class="sign-circle3"></div>
+                    <div class="portfolio-title">
+                        <h1>국립재난안전연구원</h1>
+                    </div>
+                    <div class="introduce">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>03</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
+            </section>
+            <!-- <section class="portfolio">
+                <div class="Arcteryx-sign">
+                    <div class="sign-circle"></div>
+                    <div class="portfolio-title">
+                        <h1>Arc'teryx</h1>
+                    </div>
+                    <div class="introduce">
+                        <div>사용프로그램</div>
+                        <div>참여도 100%</div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>01</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
+                <article class="arcteryx">
+                    <div class="pc">
+                        <div class="mbsite-page">
+                            <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_사이트_이미지">
+                            <img src="./image/s_image/아크테릭스 전체화면 캡쳐.png" alt="arcteryx_사이트_이미지">
+                        </div>
+                        <div class="arcteryx-mobile">
+                            <h2>Arc'teryx</h2>
+                            <h4>리디자인</h4>
+                            <div class="mobile-image">
+                               <img src="./image/s_image/아크테릭스 아이폰.png" alt="arc'teryx_mobile"></div>
+                            <a href="https://tjsdk1260.github.io/arcteryx/"target="_blank" id="clickBtn">사이트 바로가기</a>
+                        </div>
+                        
+                    </div>
+                </article>
+                <div class="nonfiction-sign">
+                    <div class="sign-circle2"></div>
+                    <div class="portfolio-title">
+                        <h1>Nonfiction</h1>
+                    </div>
+                    <div class="introduce">
+                        <div>사용프로그램</div>
+                        <div>참여도 100%</div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>02</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
                 <article class="nonfiction">
                     <div class="pc">
-                        <div class="site-pc-page">
+                        <div class="site-page">
                             <img src="./image/s_image/논픽션 전체화면 캡쳐.png" alt="nonfiction_site_img">
+                            <img src="./image/s_image/논픽션 모바일 전체화면 캡쳐.png" alt="nonfiction_mobile_img">
                         </div>
                         <div>
                             <div class="site-circle"></div>
@@ -139,17 +260,29 @@
                             <div class="pc-image">
                                 <img src="./image/s_image/논픽션 아이맥&아이폰.png" alt="nonfiction_pc&mobile">
                             </div>
-                            <div>소개 반응형</div>
-                            <div>사용 프로그램</div>
-                            <div>기획 디자인 참여도 100%</div>
                             <button>스토리보드</button>
-                            <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank">사이트 바로가기</a>
+                            <a href="https://tjsdk1260.github.io/Nonfiction/" target="_blank" id="clickBtn">사이트 바로가기</a>
                         </div>
                     </div>
                 </article>
+                <div class="national-sign">
+                    <div class="sign-circle3"></div>
+                    <div class="portfolio-title">
+                        <h1>Nonfiction</h1>
+                    </div>
+                    <div class="introduce">
+                        <div>사용프로그램</div>
+                        <div>참여도 100%</div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit dolore non ab officiis minima. Temporibus nisi facere assumenda perferendis officia vitae ratione nulla, expedita sit eos odio, nostrum recusandae quod.
+                    </div>
+                    <div class="number">
+                        <span>03</span>
+                        <div>portfolio</div>
+                    </div>
+                </div>
                 <article class="national">
                     <div class="pc">
-                        <div class="site-pc-page">
+                        <div class="site-page">
                           <img src="./image/s_image/국립재난안전연구원 전체화면 캡쳐.png" alt="국립재난안전연구원_사이트_이미지">
                         </div>
                         <div>
@@ -159,15 +292,12 @@
                             <div class="pc-image">
                                 <img src="./image/s_image/국립재난안전연구원 아이맥&아이폰.png" alt="국립재난안전연구원_pc&mobile">
                             </div>
-                            <div>소개 반응형</div>
-                            <div>사용 프로그램</div>
-                            <div>기획 디자인 참여도 100%</div>
                             <button>스토리보드</button>
-                            <a href=" https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank">사이트 바로가기</a>
+                            <a href=" https://tjsdk1260.github.io/National-Disaster-and-Safety-Research-Institute/" target="_blank"  id="clickBtn">사이트 바로가기</a>
                         </div>
                     </div>
                 </article>
-            </section>
+            </section> -->
             <section class="contact">
                 sns 전화번호
                 <div class="contact-circle"></div>
